syntax = "proto3";

package proto;

option go_package = "/grpc-tutorial;grpc_tutorial";

message Request {
  int64 a = 1;
  int64 b = 2;
}

message Response { 
  int64 result = 1; 
}

message GeDataParams{

}

message DataList{
  repeated Dados dados = 1;
}

message Dados{
  int64 datatype_id = 1;
  float data_min = 2;
  float data_max = 3;
}

service AddService {
  rpc Add(Request) returns (Response);
  rpc Multiply(Request) returns (Response);
  rpc GetData(GeDataParams) returns (DataList);
}